[metadata]
name = extract-tisdk
url = https://github.com/Paul-Goulpie/extract-tisdk
version = 1.0.0
description = Extract files from TI Processor SDK BitRock/CookFS installers without running them
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = ti, processor-sdk, bitrock, cookfs, installer, extractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: POSIX :: Linux
    Topic :: System :: Installation/Setup
    Topic :: Utilities

[options]
py_modules = extract_tisdk
python_requires = >=3.7

[options.entry_points]
console_scripts =
    extract-tisdk = extract_tisdk:main
